# DINOv3-TRT-Acceleration

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: README.md
Code/: README.md  pyproject.toml
Code/config/: preprocess.yaml
Code/cpp/: CMakeLists.txt
Code/cpp/include/dinov3_trt/: cuda_graph_pool.h  engine_metadata.h  pinned_buffer.h  preprocess.h  status.h  tensor.h  trt_inferer.h  trt_inferer_pool.h
Code/cpp/src/: cuda_graph_pool.cpp  engine_inspector.cpp  pinned_buffer.cpp  trt_inferer.cpp  trt_inferer_pool.cpp
Code/cpp/tests/: test_contracts.cpp
Code/cpp/tools/: dump_outputs.cpp  inspect_engine.cpp  pool_benchmark.cpp  pool_cos_validator.cpp  production_benchmark.cpp  runtime_benchmark.cpp  runtime_smoke.cpp  test_concurrent_contexts.cpp
Code/scripts/: aggregate_utilization.py  benchmark_cpp_runtime_windows.ps1  benchmark_multi_stream.py  benchmark_trtexec.py  build_all_figures.py  build_benchmark_figures.py  build_benchmark_matrix.py  build_cosine_summary_figure.py  build_cpp_trt_inspector_windows.ps1  build_engine_trtexec.py  build_formal_report_summary.py  build_int8_tradeoff_figure.py  build_layer_ablation_figure.py  build_layer_precisions_arg.py  build_mixed_precision_engine_windows.py  build_r224_b16_engine.ps1  build_v104_engines_windows.ps1  check_assets.py  check_official_dinov3_contract.py  check_pytorch_contract.py  check_quant_prereqs.py  compare_cpp_python_parity.py  compare_onnx_outputs.py  compare_trt_engines.py  download_hf_snapshot.py  download_imagenet_val_via_kaggle.py  download_official_weights.py  evaluate_engine_pair_on_images.py  evaluate_onnx_pair_on_images.py  export_hf_dinov3_onnx.py  export_hf_imagenet_parquet_images.py  export_official_dinov3_onnx.py  export_onnx.py  inspect_cpp_engines_windows.ps1  inspect_onnx.py  inspect_qdq_pairs_for_blocks.py  measure_g1_utilization.ps1  prepare_dinov3_source.py  prepare_image_subset_manifests.py  prepare_r512_dataset.py  (+20 more)
Code/src/dinov3_trt/: __init__.py  artifacts.py  contracts.py  py.typed  remote_sync.py  remote_transfer.py
Code/src/dinov3_trt/benchmarks/: __init__.py  summary.py  trtexec.py
Code/src/dinov3_trt/engine/: __init__.py  trtexec.py
Code/src/dinov3_trt/export/: __init__.py  hf_model.py  official_model.py  onnx_export.py  rope_patch.py  wrapper.py
Code/src/dinov3_trt/infer/: __init__.py  compare.py  cpp_parity.py  image_eval.py  onnx_runtime.py  trt_runtime.py
Code/src/dinov3_trt/quantization/: __init__.py  layer_precision.py  matmul_sweep.py  modelopt_onnx.py  onnx_qdq_strip_planner.py  onnx_qdq_stripper.py  preflight.py
Code/src/dinov3_trt/sparsity/: __init__.py  sparsify.py
Code/src/dinov3_trt/utils/: __init__.py  preprocess.py
Code/tests/: test_artifacts.py  test_benchmark_figures.py  test_benchmark_matrix.py  test_benchmark_summary.py  test_benchmark_trtexec.py  test_build_all_figures_script.py  test_build_layer_precisions_arg_script.py  test_check_assets_script.py  test_contracts.py  test_cpp_parity.py  test_download_imagenet_val_via_kaggle_script.py  test_formal_summary.py  test_hf_imagenet_parquet.py  test_hf_model.py  test_hf_onnx_export_script.py  test_image_eval.py  test_infer_compare.py  test_layer_ablation_script.py  test_layer_precision.py  test_matmul_sweep.py  test_modelopt_onnx_quantization.py  test_official_model.py  test_onnx_export.py  test_onnx_qdq_strip_planner.py  test_onnx_qdq_stripper.py  test_onnx_runtime.py  test_preprocess.py  test_quantization_preflight.py  test_remote_sync.py  test_remote_transfer.py  test_rope_patch.py  test_run_imagenet_val_post_download.py  test_smoothquant_script.py  test_sparsify.py  test_sparsify_onnx_weights_script.py  test_trt_runtime.py  test_trtexec.py  test_wrapper.py
Wiki/: INDEX.md
Wiki/0-项目计划/: ADR-010-V1.2-ONNX-Q-DQ-stripping_2026-05-01.md  ADR-011-V1.3-QAT-future-work_2026-05-01.md  ADR-012-V1.0.2-CUDA-Graphs-and-Pinned-Memory_2026-05-02.md  ADR-013-V1.0.2-Persistent-Timing-Cache-and-Multi-Profile_2026-05-02.md  ADR-014-V1.0.2-TRT-10.16.1-Upgrade-Validation_2026-05-02.md  ADR-015-V1.0.2-Multi-Stream-Inference_2026-05-02.md  ADR-016-V1.0.2-2to4-Structured-Sparsity_2026-05-02.md  ADR-017-V1.0.2-FP8-Refined-Scaling_2026-05-02.md  ADR-018-V1.0.2-Custom-Fused-Attention-Kernel_2026-05-02.md  ADR-019-V1.0.3-Triton-Inference-Server_2026-05-02.md  ADR-020-V1.0.3-CPP-Multi-Context-Pool_2026-05-02.md  ADR-022-V1.0.3-CUDA-MPS-Evaluation_2026-05-03.md  ADR-023-V1.0.3-TRT-LLM-vLLM-Inapplicability_2026-05-02.md  ADR-024-V1.0.4-Dataset-Resize_2026-05-07.md  ADR-025-V1.0.4-r512-Engine-Build_2026-05-07.md  ADR-026-V1.0.4-Python-Production-Benchmark_2026-05-07.md  ADR-027-V1.0.4-Cpp-Production-Benchmark_2026-05-07.md  ADR-028-V1.0.4-Report-Synthesis_2026-05-07.md  V1.3_QAT_launch_threshold_evaluation_2026-05-01.md  imagenet_403_workaround_manual_2026-05-01.md  项目计划报告_V1.0.0.md  项目计划报告_V1.0.1.md  项目计划报告_V1.0.2.md  项目计划报告_V1.0.3.md  项目计划报告_V1.0.4.md  项目计划报告_对外.md
Wiki/1-技术调研/: DINOv3-TRT-Acceleration 深度技术调研与工程部署基准报告（Gemini）.md  DINOv3-TRT-Acceleration 深度技术调研报告（Claude）.md  DINOv3-TRT-Acceleration 深度技术调研报告（GPT）.md  调研Prompt_DeepResearch_V1.md
Wiki/2-实验结果/: M1-M6-当前验收矩阵_2026-04-30.md  M1-正式结果摘要_2026-04-30.md  V1.0.3-G4-dynamic-batching-curve_2026-05-02.md  (+5 more)
Wiki/2-技术报告/: 技术报告_V1.0.0.md  (+22 more)
(+23 files in other folders)
